# joblog

./: .env.example  .gitignore  .tool-versions  Cargo.toml  Makefile  README.md
api/: .env.example  Makefile  README.md  app.py  config.yaml.example  evaluation_chat_local.py  evaluation_local.py  evaluation_openai.py  exceptions_.py  gql_mutations.py  main.py  model_server.py  models.py  paths.py  pyproject.toml  requirements.txt  ruff.toml  utils.py
api/config/: __init__.py  config.yaml.example  models.yaml  secrets.yaml.example
api/funcs/: data_assessment.py  data_structuring.py  sql_query_engine.py
api/gql_/: client_.py  mutations_.py  queries_.py
api/helpers/: data_assessment.py  data_structuring.py  resume2json.py  resume2json_local.py  schema2grammar.py  sql_query_engine.py  txt2json.py  utils.py
api/models/: __init__.py
api/mutations/: __init__.py
apps/desktop/: .eslintrc.cjs  .gitignore  bun.lockb  codegen.ts  components.json  index.html  (+5 more)
database/: Cargo.toml  Procfile
database/migrations/2024-01-28-154207_vacancies/: down.sql  up.sql
database/migrations/2024-02-12-174640_vacancies/: down.sql  up.sql
database/migrations/2024-02-13-151218_vacancies/: up.sql
database/migrations/2024-02-13-224500_vacancies/: up.sql
database/migrations/2024-02-19-105419_analyses/: up.sql
database/migrations/2024-02-19-113637_vacancies/: up.sql
database/src/: data.rs  graphql.rs  main.rs  models.rs  schema.rs
deployment/: .gitignore  Makefile  README.md  api.yaml  deploy.yaml  requirements.txt
static/: candidate.json  job_posting.txt  vacancy.json
(+26 files in other folders)
