[package]
name = "joblog"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
actix-web-lab = "0.20.0"
actix-cors = "0.6.5"
dotenv = "0.15.0"
env_logger = "0.11.1"
juniper = "0.15.12"
r2d2 = "0.8.8"
serde_json = "1.0.44"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }